--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
        </tr>
        <tr>
         <td>2020-2021</td>
-        <td>Sub-cordinator at Finance and public relation committee SAAR</td>
+        <td>Cordinator at Finance and public relation committee SAAR</td>
        </tr>
        <tr>
          <td>2020</td>
